styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:hover {
  cursor: pointer;
}

body {
  font-family: "Open Sans",
  sans-serif;
  font-size: 20px;
  color: #444;
  text-align: center;
  line-height: 1.5;
}

nav,
footer {
  padding: 1% 0;
  background-color: #aaa;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  text-align: center;
}

.name {
  display: inline-block;
  float: left;
  margin-left: 10px;
  font-size: 30px;
}

#nav-links li {
  display: inline-block;
}

#nav-links {
  float: right;
  list-style: none;
  margin-top: 7px;
  padding-right: 10px;
}



header {
  padding: 0;
  margin-top: 60px;
  margin-bottom: 0;
}

h1 {
  padding: 30px 30px;
  font-size: 40px;
}

h2 {
  font-size: 25px;
  margin-bottom: 25px;
}

section {
  min-height: 200px;
  padding: 6% 0;
  background-color: #bbb;
}

p {
  padding: 10px 10px
}

section:nth-child(even) {
  background-color: #ddd;
}

#portrait, #horrorthumb {
  width: 100%;
}

.soc-icon {
  height: 70px;
  margin: 0 30px;
}

footer {
  font-size: 20px;
}

